--- a/about.css
+++ b/about.css
@@ -76,12 +76,13 @@ nav a {
 }
 
 .top-heading {
-  display: flex;
-  width: 70%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  align-self: center;
-  font-size: 27px;
-  font-family: 'Cocogoose', sans-serif;
+  font-size: 80px;
+  font-weight: 800;
+  font-family: 'cocogoose', sans-serif;
   background-image: url(images/christmas-travel-concept-with-airplane.jpeg);
   background-size: 100%;
   background-size: cover;
@@ -89,8 +90,7 @@ nav a {
   -webkit-background-clip: text;
   color: transparent;
   -webkit-text-fill-color: transparent;
-  position: relative;
-  margin: auto;
+  margin-top: 10px;
 }
 
 .font1 {
@@ -223,10 +223,11 @@ nav a {
 }
 
 .top-container {
-  width: 100%;
   display: grid;
+  width: 50%;
+  margin: auto;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  padding-bottom: 50px;
 }
 
 .team {
@@ -257,6 +258,27 @@ nav a {
   text-align: center;
   align-self: center;
   justify-self: center;
+  font-weight: 700;
+  font-size: 12px;
+  color: #868686;
+}
+
+.divider {
+  width: 50px;
+  height: 3px;
+  background-color: #ec4327;
+  position: relative;
+  top: 40px;
+  right: 90px;
+}
+
+.divider2 {
+  width: 50px;
+  height: 3px;
+  background-color: #ec4327;
+  position: relative;
+  top: 40px;
+  right: 170px;
 }
 
 .footer-container {
@@ -291,14 +313,45 @@ nav a {
   border-top: 1px solid #272a3138;
   margin: auto;
   padding: 10px;
-  height: 324px;
+}
+
+.min-write1 {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 10px auto;
+  padding: 10px;
+}
+
+.text {
+  margin: auto;
+  padding-top: 20px;
+}
+
+.large {
+  border: 1px solid #272a3138;
+  height: 70px;
+  width: 250px;
+  padding-top: 20px;
 }
 
 .abt-head {
   display: flex;
   justify-content: center;
   text-align: center;
-  margin: 15px;
+  margin: 5px;
+}
+
+.img-div1 {
+  display: grid;
+  gap: 15px;
+}
+
+.img-text {
+  margin-top: 5px;
 }
 
 @media (min-width: 768px) {
@@ -312,6 +365,7 @@ nav a {
   }
 
   .bottom-nav {
+    font-family: 'Lato', sans-serif;
     font-size: 14px;
     font-weight: 800;
     line-height: 17px;
@@ -320,6 +374,7 @@ nav a {
     color: #868686;
     height: 75px;
     position: sticky;
+    margin: auto;
   }
 
   .campaign {
@@ -385,6 +440,10 @@ nav a {
   .two-column {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+  }
+
+  .img-div1 {
+    grid-template-columns: 1fr 1fr;
   }
 
   .logo-container {
